--- a/CKReact/ck_react/package.json
+++ b/CKReact/ck_react/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.15",
+    "@mui/material": "^5.15.18",
     "@mui/x-data-grid": "^7.3.0",
     "@mui/x-date-pickers": "^7.2.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -47,5 +47,6 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.3"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
