--- a/CKReact/ck_react/package.json
+++ b/CKReact/ck_react/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.18",
+    "@mui/icons-material": "^5.15.18",
     "@mui/x-data-grid": "^7.3.0",
     "@mui/x-date-pickers": "^7.2.0",
     "@testing-library/jest-dom": "^5.17.0",
